# api-gateway/api/docs/swagger.json
@@ -29,11 +29,11 @@
                 "parameters": [
                     {
                         "description": "createComment",
-                        "name": "Product",
+                        "name": "Post",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.PostComments"
+                            "$ref": "#/definitions/models.PostCommentsRequest"
                         }
                     }
                 ],
@@ -127,7 +127,7 @@
                 "parameters": [
                     {
                         "description": "UpdateComment",
-                        "name": "Product",
+                        "name": "Post",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -936,12 +936,6 @@
         "models.PostComments": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
@@ -953,8 +947,19 @@
                 },
                 "text": {
                     "type": "string"
+                }
+            }
+        },
+        "models.PostCommentsRequest": {
+            "type": "object",
+            "properties": {
+                "post_id": {
+                    "type": "string"
                 },
-                "updated_at": {
+                "text": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
